<resources>
    <!-- Strings related base or activity -->
    <string name="app_name">D-RC</string>
    <string name="action_settings">Settings</string>
    <string name="action_man">Manual</string>
    <string name="action_auto">Automatic</string>
    <string name="action_neopixel">NeoPixel</string>
    <string name="action_about">About</string>
    <string name="title_activity_settings">Settings</string>



    <!-- Strings related to Settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_server_ip">Server IP</string>
    <string name="pref_default_server_ip">192.168.1.101</string>
    <string name="pref_title_server_port">Server Port</string>
    <string name="pref_default_server_port">3000</string>
    <string name="pref_title_string_id">String ID</string>
    <string name="pref_default_string_id">DavidL</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">David Lejeune</string>


    <!-- Strings related to Activity elements -->
    <string name="subtitleManual">Swipe 4 fun</string>
    <string name="txtSpeedTitle">Speed</string>
    <string name="BatteryVoltage">Battery Voltage</string>
    <string name="titleAbout">David\'s RC</string>
    <string name="txtAuthor">Author : D.Lejeune</string>
    <string name="txtCreated">Created : Nov 2015</string>
    <string name="txtAbout">Forget all other programs. THIS is the GREATEST program EVER . Accept no substitute !!</string>
    <string name="txtVives"><![CDATA[Powered by \nVives & NDW Libraries]]></string>
    <string name="txtAutomatic">Automatic (noob mode)</string>
    <string name="titleDavid">@string/titleAbout</string>
    <string name="txtManual">Manual           (hardcore)</string>
    <string name="txtManualMain">Automatic          (noob mode)</string>
    <string name="txtVivesMain">@string/txtVives</string>
    <string name="txtSpeedLeft">000</string>
    <string name="txtSpeed2">@string/txtSpeedTitle</string>
    <string name="txtSpeedRight">@string/txtSpeedLeft</string>
    <string name="txtBatteryVoltage">Battery Voltage</string>
    <string name="txtBatteryVoltageTitle">\@string/BatteryVoltage</string>
    <string name="txtTitleNeopixelStrong">Get NeoPixel string information</string>
    <string name="lblStringID">String ID :</string>
    <string name="lblNrOfPixels"># of pixels :</string>
    <string name="txtStringID">DavidL</string>
    <string name="txtNumberOfPixels">0</string>
    <string name="txtNeopixelTitle">Set NeoPixel color</string>
    <string name="lblRed">Red</string>
    <string name="lblBlue">Blue</string>
    <string name="lblGreen">Green</string>
    <string name="lblDelay">Delay</string>
    <string name="btnGet">GET</string>
    <string name="btnPost">POST</string>
    <string name="txtAutomatic2">\@string/txtAutomatic</string>
    <string name="txtAutomatic3">\@string/txtAutomatic</string>












</resources>
