<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">




    <EditTextPreference
        android:key="server_ip"
        android:title="@string/pref_title_server_ip"
        android:defaultValue="@string/pref_default_server_ip"
        android:selectAllOnFocus="true"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />


    <EditTextPreference
        android:key="server_port"
        android:title="@string/pref_title_server_port"
        android:defaultValue="@string/pref_default_server_port"
        android:selectAllOnFocus="true"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />


    <EditTextPreference
        android:key="string_id"
        android:title="@string/pref_title_string_id"
        android:defaultValue="@string/pref_default_string_id"
        android:selectAllOnFocus="true"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />







    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="example_text"
        android:title="@string/pref_title_display_name"
        android:defaultValue="@string/pref_default_display_name"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />



</PreferenceScreen>
