<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_man" android:title="@string/action_man"
        android:orderInCategory="200" app:showAsAction="never" />
    <item android:id="@+id/action_auto" android:title="@string/action_auto"
        android:orderInCategory="200" app:showAsAction="never" />
    <item android:id="@+id/action_neopixel" android:title="@string/action_neopixel"
        android:orderInCategory="200" app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="200" app:showAsAction="never" />
</menu>
