<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:id="@+id/MainScreen">



    <TextView android:text="@string/titleDavid" android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="#546de7"
        android:typeface="monospace"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/imgPlay"
        android:src="@drawable/gta"
        android:layout_marginRight="86dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/imgAbout"
        android:src="@drawable/info"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:onClick="onAboutClick"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imgAuto"
        android:src="@drawable/auto2"
        android:onClick="onAutoClick"
        android:layout_below="@+id/imgPlay"
        android:layout_alignEnd="@+id/textView" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imgMan"
        android:src="@drawable/man"
        android:onClick="onManClick"
        android:layout_below="@+id/imgPlay"
        android:layout_toStartOf="@+id/imgPlay" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtManual"
        android:id="@+id/textView6"
        android:layout_below="@+id/imgAuto"
        android:layout_alignStart="@+id/imgMan"
        android:layout_toStartOf="@+id/imgPlay"
        android:textAlignment="center"
        android:textColor="#8ff3ad"
        android:clickable="true"
        android:onClick="onManClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtManualMain"
        android:id="@+id/textView7"
        android:textAlignment="center"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignEnd="@+id/imgAuto"
        android:layout_alignStart="@+id/imgAuto"
        android:textColor="#8ff3ad"
        android:clickable="true"
        android:onClick="onAutoClick" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/imageView6"
        android:src="@drawable/vives"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtVivesMain"
        android:id="@+id/txtVivesMain"
        android:textSize="9sp"
        android:typeface="monospace"
        android:textColor="#fa3838"
        android:layout_alignBottom="@+id/imgAbout"
        android:layout_toEndOf="@+id/imageView6" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="N"
        android:id="@+id/textView30"
        android:textColor="#dd3939"
        android:onClick="onNeopixelClick"
        android:clickable="true"
        android:textSize="30dp"
        android:layout_below="@+id/textView6"
        android:layout_toStartOf="@+id/imgPlay"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="e"
        android:id="@+id/textView31"
        android:textColor="#e1df36"
        android:onClick="onNeopixelClick"
        android:layout_alignTop="@+id/textView30"
        android:layout_toEndOf="@+id/textView30"
        android:clickable="true"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="o"
        android:id="@+id/textView32"
        android:textColor="#362f57"
        android:layout_alignTop="@+id/textView31"
        android:layout_toEndOf="@+id/textView31"
        android:onClick="onNeopixelClick"
        android:clickable="true"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="P"
        android:id="@+id/textView33"
        android:layout_alignTop="@+id/textView32"
        android:layout_toEndOf="@+id/textView32"
        android:onClick="onNeopixelClick"
        android:clickable="true"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="i"
        android:id="@+id/textView34"
        android:textColor="#a08178"
        android:layout_alignTop="@+id/textView33"
        android:layout_toEndOf="@+id/textView33"
        android:onClick="onNeopixelClick"
        android:clickable="true"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="x"
        android:id="@+id/textView35"
        android:textColor="#fa041d"
        android:layout_alignTop="@+id/textView34"
        android:layout_toEndOf="@+id/textView34"
        android:onClick="onNeopixelClick"
        android:clickable="true"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="e"
        android:id="@+id/textView36"
        android:textColor="#6a02fc"
        android:layout_alignTop="@+id/textView35"
        android:layout_toEndOf="@+id/textView35"
        android:onClick="onNeopixelClick"
        android:clickable="true"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="l"
        android:id="@+id/textView37"
        android:textColor="#96d767"
        android:onClick="onNeopixelClick"
        android:layout_alignTop="@+id/textView36"
        android:layout_toEndOf="@+id/textView36"
        android:clickable="true"
        android:textSize="30dp" />


</RelativeLayout>
